@@ -6,27 +6,36 @@
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
+#include <arpa/inet.h>
 
+/* This version updated to support both IPv4 and IPv6 */
 #define VERSION			0
 #define LINE_LEN		1024
 #define WHITESPACE		"\t\n\v\f\r "
 #define DISCARD_BUFSIZE		(16*1024)
 
-int discard_child(struct sockaddr_in *addr)
+const int debug=0;	/* make the compiler fix it*/
+
+void showbytes(unsigned char *str, int len)
+{
+  while (len--) printf ("%02x", *str++);
+}
+
+int discard_child(struct addrinfo *addr)
 {
 	pid_t pid;
 	int sock;
 	char buf[DISCARD_BUFSIZE];
 	
-	if ((sock = socket(addr->sin_family, SOCK_STREAM, 0)) < 0) {
+	if ((sock = socket(addr->ai_family, addr->ai_socktype, addr->ai_protocol)) < 0) {
 		perror("sock");
 		exit(1);
 	}
-	if (connect(sock, (struct sockaddr *)addr, sizeof (struct sockaddr_in)) != 0) {
-		perror("connect");
+	if (connect(sock, addr->ai_addr, addr->ai_addrlen) != 0) {
+		perror("discard connect");
 		exit(1);
 	}
-	
+	if (debug) printf("Discarding\n");
 	if ((pid = fork()) < 0) {
 		perror("fork");
 		return -1;
@@ -40,24 +49,44 @@ int discard_child(struct sockaddr_in *addr)
 	
 	return 0;
 }
+#define MAXEXTRAS 1024
 
 int main(int argc, char *argv[])
 {
-	char *serv_name;
-	int port, rtt, rate;
-	struct sockaddr_in serv_addr;
-	struct hostent *serv_hent;
+  char *serv_name, *port;
+	int rtt, rate, r;
+	struct addrinfo *result, *serv_addr;
 	int control_sock;
 	FILE *control_in, *control_out;
-	int handshake;
-	
-	/* Parse args */
+	int handshake = 0, test_started = 0, extra_args=0;
+	char *extras=0, extrabuf[MAXEXTRAS], *ap, *cp=extrabuf;
+	struct addrinfo hint = {
+	  .ai_family = AF_UNSPEC,
+	  .ai_socktype = SOCK_STREAM,
+	  .ai_flags = AI_ADDRCONFIG|AI_NUMERICSERV|AI_CANONNAME,
+	};
+
+	/* all args that start with '-' are passed to the server via the extra_args command */
+	cp=extrabuf;
+	while (argc > 1 && cp < &extrabuf[MAXEXTRAS]) {
+		if (argv[1][0] != '-')
+			break;
+		*cp++ = ' ';
+		for (ap=argv[1];*ap && cp < &extrabuf[MAXEXTRAS-1];)
+			*cp++ = *ap++;
+		*cp = '\0';
+		extras=extrabuf;
+		argv++;
+		argc--;
+	}
+
+	/* Parse remaining args */
 	if (argc <  3) {
 		fprintf(stderr, "Usage: %s server port [rtt] [rate]\n", argv[0]);
 		exit(1);
 	}
 	serv_name = argv[1];
-	port = atoi(argv[2]);
+	port = argv[2];
 
 	if (argc < 4) {
 		rtt = 10;
@@ -72,21 +101,35 @@ int main(int argc, char *argv[])
 	printf("Using: rtt %d ms and rate %d\n" , rtt, rate);
 	
 	/* Lookup server name and establish control connection */
-	if ((serv_hent = gethostbyname(serv_name)) == NULL) {
-		fprintf(stderr, "gethostbyname: failed: %s\n", serv_name);
-		exit(1);
+	r = getaddrinfo(serv_name, port, &hint, &result);
+	if (r != 0) {
+	  fprintf(stderr, "getaddrinfo: %s\n", gai_strerror(r));
+	  exit(-1);
 	}
-	serv_addr.sin_family = AF_INET;
-	memcpy(&serv_addr.sin_addr.s_addr, serv_hent->h_addr_list[0], sizeof (in_addr_t));
-	serv_addr.sin_port = htons(port);
-	if ((control_sock = socket(PF_INET, SOCK_STREAM, 0)) < 0) {
-		perror("socket");
-		exit(1);
+
+        for (serv_addr = result; serv_addr != NULL; serv_addr = serv_addr->ai_next) {
+	  char buf[INET_ADDRSTRLEN];
+
+	  showbytes((unsigned char *)serv_addr->ai_addr, sizeof(serv_addr->ai_addr));
+	  printf(" Trying (%s) (%s)\n", serv_addr->ai_canonname,
+		 inet_ntop(serv_addr->ai_family, serv_addr->ai_addr, buf, INET_ADDRSTRLEN ));
+
+	  control_sock = socket(serv_addr->ai_family, serv_addr->ai_socktype, serv_addr->ai_protocol);
+	  if (control_sock == -1)
+	    continue;
+
+	  if (connect(control_sock, serv_addr->ai_addr, serv_addr->ai_addrlen) != -1) {
+	    printf("Connect %d\n", control_sock);
+	    break;                  /* Success */
+	  }
+
+	  close(control_sock);
 	}
-	if (connect(control_sock, (struct sockaddr *)&serv_addr, sizeof (serv_addr)) != 0) {
-		perror("connect");
-		exit(1);
+	if (!serv_addr) {
+	  fprintf(stderr, "Could not connect\n");
+	  exit -1;
 	}
+
 	if ((control_in = fdopen(control_sock, "r")) == NULL ||
 	    (control_out = fdopen(control_sock, "w")) == NULL) {
 		perror("fdopen");
@@ -98,15 +141,14 @@ int main(int argc, char *argv[])
 	
 	/* Tell the server we're here. */
 	fprintf(control_out, "handshake %d\n", VERSION);
+	if (debug) printf("Sent: handshake %d\n", VERSION);
 	
 	/* Main loop reading commands from server, line-based */
-	handshake = 0;
 	while (!feof(control_in)) {
 		int c, i;
 		char line[LINE_LEN], parse_line[LINE_LEN];
 		char *cmd[LINE_LEN];
 		int cmdlen;
-		int test_started = 0;
 		
 		/* Read one line (max 1024 chars).
 		 * Remove newline, null terminate. */
@@ -116,6 +158,7 @@ int main(int argc, char *argv[])
 				line[i++] = (char)c;
 		}
 		line[i] = '\0';
+		if (debug) printf("Input: %s\n", line);
 		
 		/* Tokenize */
 		strcpy(parse_line, line);
@@ -126,8 +169,8 @@ int main(int argc, char *argv[])
 			;
 		cmdlen = i;
 		
-		/* Look for errors firs (this can happen on handshake
-		 * version mismatch. */
+		/* Look for errors first (this can happen on handshake
+		 * version mismatch). */
 		if (!strcmp(cmd[0], "error")) {
 			printf("%s\n", line);
 			exit(1);
@@ -143,13 +186,28 @@ int main(int argc, char *argv[])
 			}
 			printf("Control connection established.\n");
 			handshake = 1;
-			
-			/* Handshake okay, start pathdiag */
-			fprintf(control_out, "test_pathdiag %d %d\n", rtt, rate);
-			continue;
+			/* Handshake okay, drop through */
 		}
-		
-		if (!test_started) {
+		if (extras) {
+			if (extra_args == 0) {
+				fprintf(control_out, "extra_args %s\n", extras);
+				if (debug) printf("sent: extra_args %s\n", extras);
+				extra_args = 1;
+				continue;
+			} else if (extra_args == 1) {
+				if (strcmp(cmd[0], "extra_args") || cmdlen < 2 || strcmp(cmd[1], "OK")) {
+					fprintf(stderr, "Protocol error: extra args were rejected\n%s\n", line);
+					exit(1);
+				}
+				extra_args = 2;
+			}
+		}
+		if (test_started == 0) {
+			fprintf(control_out, "test_pathdiag %d %d\n", rtt, rate);
+			if (debug) printf("sent: test_pathdiag %d %d\n", rtt, rate);
+			test_started = 1;
+			continue;
+		} else if (test_started == 1) {
 			if (!strcmp(cmd[0], "queue_depth")) {
 				if (cmdlen < 2) {
 					fprintf(stderr, "Protocol warning: bad queue_depth command.\n");
@@ -164,12 +222,15 @@ int main(int argc, char *argv[])
 					fprintf(stderr, "Protocol error: bad listen command.\n");
 					exit(1);
 				}
-				/* Ignore the address the server send. */
-				serv_addr.sin_port = htons(atoi(cmd[2]));
+				/* Override the port for data connection. */
 				printf("port = %s\n", cmd[2]);
-				if (discard_child(&serv_addr) != 0)
+				{
+				  struct sockaddr_in *sin = (struct sockaddr_in *) serv_addr->ai_addr;
+				  sin->sin_port = htons(atoi(cmd[2]));
+				}
+				if (discard_child(serv_addr) != 0)
 					exit(1);
-				test_started = 1;
+				test_started = 2;
 				printf("Starting test.\n");
 				continue;
 			}
